objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>PLNDR__Others_FS_Taxes__c</fullName>
        <description>PrecisionLender All Others Taxes</description>
        <inlineHelpText>PrecisionLender All Others Taxes</inlineHelpText>
        <label>Others Taxes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__PrecisionLender_Last_Updated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PrecisionLender Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PLNDR__PricingDate__c</fullName>
        <description>The Pricing Date for the Opportunity utilizes the Cost of Funds and other underlying assumptions that were active as of that date.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Pricing Date for the Opportunity utilizes the Cost of Funds and other underlying assumptions that were active as of that date.</inlineHelpText>
        <label>Pricing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PLNDR__Scenario_Count__c</fullName>
        <description>Rolled up count of Scenarios</description>
        <inlineHelpText>PrecisionLender Opportunity Scenario Count</inlineHelpText>
        <label>Scenario Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLOC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PLOC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payoff_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Payoff Source</label>
        <length>104</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Person Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pre_Approved_Amount__c</fullName>
        <label>Pre-Approved Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Approved_Rate__c</fullName>
        <label>Pre-Approved Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product1__c</fullName>
        <label>Product-1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Gap Policy</fullName>
                </value>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Visa Increase</fullName>
                </value>
                <value>
                    <fullName>Checking Account</fullName>
                </value>
                <value>
                    <fullName>EZ Pay</fullName>
                </value>
                <value>
                    <fullName>HELOC</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>Motorcycle</fullName>
                </value>
                <value>
                    <fullName>MRC</fullName>
                </value>
                <value>
                    <fullName>PLOC</fullName>
                </value>
                <value>
                    <fullName>RV</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Signature Loan</fullName>
                </value>
                <value>
                    <fullName>Small RV</fullName>
                </value>
                <value>
                    <fullName>Business Referral</fullName>
                </value>
                <value>
                    <fullName>Business CD</fullName>
                </value>
                <value>
                    <fullName>Business Checking</fullName>
                </value>
                <value>
                    <fullName>Business Money Market Savings</fullName>
                </value>
                <value>
                    <fullName>Business Online Wire Transfers</fullName>
                </value>
                <value>
                    <fullName>Business Preferred Pay</fullName>
                </value>
                <value>
                    <fullName>Business Premium Money Market</fullName>
                </value>
                <value>
                    <fullName>Business Remote Deposit Capture</fullName>
                </value>
                <value>
                    <fullName>Business Secondary Savings</fullName>
                </value>
                <value>
                    <fullName>Business Line of Credit</fullName>
                </value>
                <value>
                    <fullName>Business Visa Credit Card</fullName>
                </value>
                <value>
                    <fullName>Business Auto</fullName>
                </value>
                <value>
                    <fullName>Business Term</fullName>
                </value>
                <value>
                    <fullName>Commercial Real Estate</fullName>
                </value>
                <value>
                    <fullName>Commercial Construction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductMajorCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Major Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductMinorCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Minor Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Amount__c</fullName>
        <label>Product Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Interest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>Checks selected value of &quot;Product&quot; Opportunity picklist field.
Returns either &quot;Loan&quot;, &quot;Mortgage&quot;, or &quot;Other&quot; for other values.</description>
        <formula>CASE( Product__c ,
&quot;Auto&quot; , &quot;Loan&quot; ,
&quot;Visa&quot; , &quot;Loan&quot; ,
&quot;Visa Increase&quot; , &quot;Loan&quot; ,
&quot;HELOC&quot; , &quot;Loan&quot; ,
&quot;Motorcycle&quot; , &quot;Loan&quot; ,
&quot;PLOC&quot; , &quot;Loan&quot; ,
&quot;RV&quot; , &quot;Loan&quot; ,
&quot;Signature Loan&quot; , &quot;Loan&quot; ,
&quot;Small RV&quot; , &quot;Loan&quot; ,
&quot;Mortgage&quot; , &quot;Mortgage&quot; ,
&quot;Other&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                    <color>#FF99FF</color>
                    <label>Auto</label>
                </value>
                <value>
                    <fullName>Gap Policy</fullName>
                    <color>#CC33CC</color>
                    <label>Gap Policy</label>
                </value>
                <value>
                    <fullName>Visa</fullName>
                    <color>#993399</color>
                    <label>Visa</label>
                </value>
                <value>
                    <fullName>Visa Increase</fullName>
                </value>
                <value>
                    <fullName>Checking Account</fullName>
                    <color>#DDDDDD</color>
                    <label>Checking Account</label>
                </value>
                <value>
                    <fullName>EZ Pay</fullName>
                    <color>#999999</color>
                    <label>EZ Pay</label>
                </value>
                <value>
                    <fullName>HELOC</fullName>
                    <color>#333333</color>
                    <label>HELOC</label>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                    <color>#9999FF</color>
                    <label>Mortgage</label>
                </value>
                <value>
                    <fullName>Asset Watch Referral</fullName>
                </value>
                <value>
                    <fullName>Motorcycle</fullName>
                    <color>#3366FF</color>
                    <label>Motorcycle</label>
                </value>
                <value>
                    <fullName>MRC</fullName>
                </value>
                <value>
                    <fullName>PLOC</fullName>
                    <color>#0B24BE</color>
                    <label>PLOC</label>
                </value>
                <value>
                    <fullName>RV</fullName>
                    <color>#000099</color>
                    <label>RV</label>
                </value>
                <value>
                    <fullName>Savings</fullName>
                    <color>#66FF99</color>
                    <label>Savings</label>
                </value>
                <value>
                    <fullName>Signature Loan</fullName>
                    <color>#33CC00</color>
                    <label>Signature Loan</label>
                </value>
                <value>
                    <fullName>Small RV</fullName>
                    <color>#006600</color>
                    <label>Small RV</label>
                </value>
                <value>
                    <fullName>Business Referral</fullName>
                </value>
                <value>
                    <fullName>Business CD</fullName>
                </value>
                <value>
                    <fullName>Business Checking</fullName>
                </value>
                <value>
                    <fullName>Business Money Market Savings</fullName>
                </value>
                <value>
                    <fullName>Business Online Wire Transfers</fullName>
                </value>
                <value>
                    <fullName>Business Preferred Pay</fullName>
                </value>
                <value>
                    <fullName>Business Premium Money Market</fullName>
                </value>
                <value>
                    <fullName>Business Remote Deposit Capture</fullName>
                </value>
                <value>
                    <fullName>Business Secondary Savings</fullName>
                </value>
                <value>
                    <fullName>Business Line of Credit</fullName>
                </value>
                <value>
                    <fullName>Business Visa Credit Card</fullName>
                </value>
                <value>
                    <fullName>Business Auto</fullName>
                </value>
                <value>
                    <fullName>Business Term</fullName>
                </value>
                <value>
                    <fullName>Commercial Real Estate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PromotionCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The promotion code to use on this account opening application.</inlineHelpText>
        <label>Promotion Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Value__c</fullName>
        <label>Property Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Purpose of Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cold</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Hot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referred__c</fullName>
        <label>Referred By:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Team Member</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Outside</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referring_Team_Member__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Referring Team Member</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>East Idaho</fullName>
                </value>
                <value>
                    <fullName>Magic Valley</fullName>
                </value>
                <value>
                    <fullName>North Idaho</fullName>
                </value>
                <value>
                    <fullName>Treasure Valley</fullName>
                </value>
                <value>
                    <fullName>Washington</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reports To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Email_Yes_No__c</fullName>
        <label>Send Email Yes/No</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Dates__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Dates</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Term</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Amount__c</fullName>
        <label>Total Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Request__c</fullName>
        <label>Type of Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Nonprofit Donation</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Financial Education</fullName>
                </value>
                <value>
                    <fullName>Item Request</fullName>
                </value>
                <value>
                    <fullName>Other Partnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visa__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Visa</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_to_Lead_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Web to Lead Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avokaApplicationInfoJSON__c</fullName>
        <description>The application info for an opportunity.</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>avokaApplicationInfoJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Product__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Avoka_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Product__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AvokaJob__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Avoka Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Opportunities_Past_90_Days</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Credit_Score__c</columns>
        <columns>Loan_to_Value__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Product__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>All Opportunities-Past 90 Days</label>
    </listViews>
    <listViews>
        <fullName>Community_Involvement_Lead</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Community_Involvement</value>
        </filters>
        <label>Community Involvement Opportunity</label>
        <sharedTo>
            <group>Community_Involvement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Copy_of_Home_Loan</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>App_ID__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>Amount_Financed__c</columns>
        <columns>Loan_to_Value__c</columns>
        <columns>Term__c</columns>
        <columns>Interest_Rate__c</columns>
        <columns>Credit_Score__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/14/2019 12:00 AM</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Prospect</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>No Further Action</value>
        </filters>
        <label>MRS eBranch Lockout 9/30/2019</label>
        <sharedTo>
            <role>Member_Relationship_Agent</role>
            <role>Member_Relationship_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Experian</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Person_Number__c</columns>
        <columns>Credit_Score__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>Campaign_Source__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Experian</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Prospect</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>No Further Action</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>2/1/2020 12:00 AM</value>
        </filters>
        <label>Experian</label>
        <sharedTo>
            <role>Member_Relationship_Agent</role>
            <role>Member_Relationship_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Home_Loan</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>App_ID__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>Amount_Financed__c</columns>
        <columns>Loan_to_Value__c</columns>
        <columns>Term__c</columns>
        <columns>Interest_Rate__c</columns>
        <columns>Credit_Score__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Home Loan Report</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Prospect</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>No Further Action</value>
        </filters>
        <label>Home Loan</label>
        <sharedTo>
            <role>Member_Relationship_Agent</role>
            <role>Member_Relationship_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IL_Onboarding1</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>App_ID__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>Year__c</columns>
        <columns>Make__c</columns>
        <columns>Model__c</columns>
        <columns>Dealer_Name__c</columns>
        <columns>Loan_to_Value__c</columns>
        <columns>GAP_Amount__c</columns>
        <columns>Credit_Score__c</columns>
        <columns>Amount_Financed__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Campaign_Source__c</field>
            <operation>equals</operation>
            <value>IL Onboarding</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>No Further Action</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>MRA - Complete,Complete,Member Rejected</value>
        </filters>
        <label>IL Onboarding</label>
        <sharedTo>
            <role>Member_Relationship_Agent</role>
            <role>Member_Relationship_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyClosedWonOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Product__c</columns>
        <columns>Product_Amount__c</columns>
        <columns>App_ID__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>My Closed Won Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Closed_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Product__c</columns>
        <columns>Product_Amount__c</columns>
        <columns>App_ID__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Closed Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Opportunities_Last_30_Days</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Credit_Score__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Product__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Last_Contacted__c</columns>
        <columns>LeftMessageOne__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Opportunities-Past 30 Days</label>
    </listViews>
    <listViews>
        <fullName>My_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Product__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>MRA - Complete,MRA - Decline,MRA - Member Decline,BR - Loan Funded,BR - Deposit Funded,BR - Loan Lost,BR - Deposit Lost,BR - Withdrawn,BL - Withdrawn,BL - Declined,BL - Shop,BD - Completed,BD - Cancelled</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>FSC - Complete,FSC - Declined,FSC - Member Decline,FSC - NFA,Closed,Complete,Declined,Member Rejected</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Opportunity.Prospect</value>
        </filters>
        <label>My Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Online_In_Review_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Product__c</columns>
        <columns>ProductMajorCode__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Online_Account_Opening</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>batc</value>
        </filters>
        <filters>
            <field>AOReviewRequired__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Online In Review Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Sept_19_Debt_Consolidation</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Phone__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>Credit_Score__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Experian</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Prospect</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>No Further Action</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>9/1/2019 12:00 AM</value>
        </filters>
        <label>Sept 19 Debt Consolidation</label>
        <sharedTo>
            <role>Member_Relationship_Agent</role>
            <role>Member_Relationship_Manager</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Community_Involvement</fullName>
        <active>true</active>
        <businessProcess>Community Involvement</businessProcess>
        <label>Community Involvement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <businessProcess>Default</businessProcess>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>DepositProduct</fullName>
        <active>true</active>
        <businessProcess>Deposit Products</businessProcess>
        <label>Deposit Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>HELOC</fullName>
        <active>true</active>
        <businessProcess>HELOC</businessProcess>
        <description>HELOC product sales process</description>
        <label>HELOC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loan</fullName>
        <active>true</active>
        <businessProcess>FSC Loan Process</businessProcess>
        <description>Loan products except HELOC</description>
        <label>Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Online_Account_Opening</fullName>
        <active>true</active>
        <businessProcess>Online Account Opening</businessProcess>
        <description>This record type will be used by the online account opening.</description>
        <label>Online Account Opening</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect</fullName>
        <active>true</active>
        <businessProcess>Prospect</businessProcess>
        <label>Prospect</label>
    </recordTypes>
</CustomObject>